--- a/views/page/halaman-admin.ejs
+++ b/views/page/halaman-admin.ejs
@@ -30,6 +30,12 @@
             <p>Menentukan kurir dan zona pada <br>pengiriman paket.</p>
          </div>
          <a class="green-btn1" href="/penentuan-kurir">Penentuan Kurir</a>
+
+      <div class="button-desc">
+         <h1>List Pengantaran</h1>
+         <p>Melihat kurir beserta paket<br>yang dibawa.</p>
+         <a class="green-btn1" href="/list-pengantaran-paket">List Pengantaran</a>
+      </div>
       </div>
       <div class="right-panel">
          <div class="button-desc">
