--- a/views/page/admin/list-pengantaran-paket.ejs
+++ b/views/page/admin/list-pengantaran-paket.ejs
@@ -79,6 +79,11 @@
             width: 80%;
         }
 
+        .confirm-section {
+            margin-top: 5px;
+            margin-bottom: 20px;
+        }
+
         .close {
             color: #aaa;
             float: right;
