--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -146,11 +146,11 @@
               <input type="text" id="berat" name="berat" placeholder="Berat paket" />
             </div>
         <div class="form-flex">
-          <label for="panjang">Panjang</label>
+          <label for="panjang">Panjang  (cm)</label>
           <input type="text" id="panjang" name="panjang" placeholder="Panjang paket" oninput="hitungDimensi()" />
         </div>
         <div class="form-flex">
-          <label for="lebar">Lebar</label>
+          <label for="lebar">Lebar (cm)</label>
           <input type="text" id="lebar" name="lebar" placeholder="Lebar paket" oninput="hitungDimensi()" />
         </div>
         <div class="form-flex">
@@ -158,7 +158,7 @@
           <input type="text" id="dimensi" name="dimensi" placeholder="Dimensi paket" />
         </div>
         <div class="form-flex">
-          <label for="jumlah_kiriman">Jumlah Kiriman</label>
+          <label for="jumlah_kiriman">Jumlah Kiriman  (buah)</label>
           <input type="text" id="jumlah_kiriman" name="jumlah_kiriman"
             placeholder="Jumlah paket yang akan dikirim" />
         </div>
