--- a/views/page/halaman-agen.ejs
+++ b/views/page/halaman-agen.ejs
@@ -158,7 +158,7 @@
           <input type="text" id="dimensi" name="dimensi" placeholder="Dimensi paket" />
         </div>
         <div class="form-flex">
-          <label for="jumlah_kiriman">Jumlah Kiriman  (buah)</label>
+          <label for="jumlah_kiriman">Jumlah Kiriman<br>(buah)</label>
           <input type="text" id="jumlah_kiriman" name="jumlah_kiriman"
             placeholder="Jumlah paket yang akan dikirim" />
         </div>
